<?xml version="1.0"?>
<package>
  <name>blt_tof</name>
  <version>0.0.0</version>
  <description>The generic Bluetechnix ToF device package</description>

  <maintainer email="roman@dissauer.net">Roman Dissauer</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/rdissauer/blt_tof_ros_pkg</url>

  <author email="roman@dissauer.net">Roman Dissauer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>